--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -5,8 +5,6 @@
 // --------------------------------------------------------
 
 // ====================== Переменные ======================
-@import "import/variables";
-
 
 $minwidth: 320px;
 $mw: 1343;
@@ -16,6 +14,22 @@ $md3: 767.98;
 $md_552: 551.98;
 $md4: 479.98;
 $fontfamily: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', 'Segoe WP', 'Helvetica Neue', 'Lucida Grande', Verdana, Tahoma, Arial, sans-serif;
+
+$black: #303438;
+$white: #FFFFFF;
+$red: #E81F76;
+$lightRed: #FFE6F1;
+$orange: #FFA000;
+$lightOrange: #FFF1E4;
+$yellow: #FCC201;
+$lightYellow: #FFF4C7;
+$green: #17CF7B;
+$darkGray: #ABB2BA;
+$lightGray: #F1F5F9;
+$lightGrayHover: #E3E8ED;
+
+$divider: #EAF0F6;
+$boxShadow: 0px 0px 40px rgba(69, 76, 84, 0.08);
 
 // --------------------------------------------------------
 
