--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -26,6 +26,12 @@ svg{
 		height: 24px;
 		display: block;
 	}
+	&.w124{
+		flex: 0 0 124px;
+		width: 124px;
+		height: 124px;
+		display: block;
+	}
 }
 
 img, video{
@@ -71,6 +77,7 @@ hr{
 .p-16-0{padding: 16px 0;}
 .p-0-8{padding: 0 8px;}
 .p-32-0{padding: 32px 0;}
+.p-32{padding: 32px;}
 
 .main-p-32-16{padding: 32px 16px;}
 .main-p-32-8{padding: 32px 8px;}
@@ -177,13 +184,14 @@ hr{
 
 .btn{
 	padding: 10px 62px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	border: 2px solid $red;
 	background-color: $red;
 	color: $white;
 	border-radius: 99px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	cursor: pointer;
 	@extend .text-control;
 	svg use{
 		fill: $white;
@@ -201,6 +209,12 @@ hr{
 		}
 	}
 }
+a.btn{
+	display: inline-flex;
+	&:hover{
+		text-decoration: none;
+	}
+}
 
 .burger{
 	background-color: transparent;
@@ -215,6 +229,11 @@ hr{
 			display: block;
 		}
 	}
+}
+
+.link{
+	color: $red;
+	@extend .text-default;
 }
 
 .btnSec{
@@ -297,8 +316,8 @@ hr{
 			left: auto;
 			right: 24px;
 		}
-		@media (min-width:$md2+px) {
-		    display: none;
+		@media (max-width:$md3+px) {
+		    display: none !important;
 		}
 	}
 }
@@ -344,8 +363,13 @@ hr{
 .switch {
 	display: flex;
 	margin: 0 -8px;
+	@media (max-width:$md_1150+px) {
+	    flex-wrap: wrap;
+	}
 	&__item {
 		padding: 0 8px;
+		flex: 1 1 auto;
+		margin-bottom: 16px;
 	}
 	input{
 		display: none;
